# outcome

./: .appveyor.yml  .coveragerc  .gitignore  .python-version  .readthedocs.yml  .travis.yml  CHEATSHEET.rst  MANIFEST.in  README.rst  ci.sh  mypy.ini  pyproject.toml  setup.cfg  setup.py  test-requirements.txt
.github/workflows/: ci.yml
ci/: rtd-requirements.txt  travis.sh
debian/: .gitignore  changelog  control  rules  watch
docs/: Makefile  make.bat
docs/source/: api.rst  conf.py  history.rst  index.rst  tutorial.rst
newsfragments/: 21.feature.rst  27.removal.rst  28.feature.rst  29.bugfix.rst  36.feature.rst  7.feature.rst
outcome/: __init__.py  _async.py  _sync.py
src/outcome/: __init__.py  _async.py  _impl.py  _sync.py  _util.py  _version.py
tests/: conftest.py  test_async.py  test_sync.py  type_tests.py
